test with embedded boxes

--- a/index.html
+++ b/index.html
@@ -238,6 +238,13 @@
 				<div id="test-chart" style="position: relative;"></div>
 			</div>
 		</div>
+		<div class="container" style="position: fixed; bottom: 120px;">
+			<div class="progress progress-hidden" id="progressBarContainer" style="height: 30px;">
+				<div class="progress-bar" role="progressbar" id="progressBar" style="color: blanchedalmond;"
+					aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+			</div>
+		</div>
+
 	</main>
 	<footer class="text-center text-light bg-dark" style="position: fixed; bottom: 0px; width: 100%;">
 		<label for="predefinedfilters">Filter</label>
