--- a/items-and-links.html
+++ b/items-and-links.html
@@ -444,7 +444,7 @@
 					}
 					// Get the currently active project.
 					const indexedDB = window.indexedDB || window.mozIndexedDB || window.webkitIndexedDB || window.msIndexedDB;
-					const openDBRequest = indexedDB.open("thingdb", 9);
+					const openDBRequest = indexedDB.open(dbNamedbVersion);
 					openDBRequest.onsuccess = (event) => {
 						const db = event.target.result;
 						const loadTransaction = db.transaction(["project"], 'readonly');
@@ -498,7 +498,7 @@
 			save: (project) => {
 				return new Promise((resolve, reject) => {
 					const indexedDB = window.indexedDB || window.mozIndexedDB || window.webkitIndexedDB || window.msIndexedDB;
-					const openDBRequest = indexedDB.open("thingdb", 9);
+					const openDBRequest = indexedDB.open(dbNamedbVersion);
 					openDBRequest.onsuccess = (event) => {
 						const db = event.target.result;
 						const saveTransaction = db.transaction(["project"], "readwrite");
@@ -559,7 +559,7 @@
 			delete: (projectId) => {
 				return new Promise((resolve, reject) => {
 					const indexedDB = window.indexedDB || window.mozIndexedDB || window.webkitIndexedDB || window.msIndexedDB;
-					const openDBRequest = indexedDB.open("thingdb", 9);
+					const openDBRequest = indexedDB.open(dbNamedbVersion);
 					openDBRequest.onsuccess = (event) => {
 						const db = event.target.result;
 						const deleteTransaction = db.transaction(["project"], "readwrite");
@@ -604,7 +604,7 @@
 				return new Promise((resolve, reject) => {
 					// Get the currently active project.
 					const indexedDB = window.indexedDB || window.mozIndexedDB || window.webkitIndexedDB || window.msIndexedDB;
-					const openDBRequest = indexedDB.open("thingdb", 9);
+					const openDBRequest = indexedDB.open(dbNamedbVersion);
 					openDBRequest.onsuccess = (event) => {
 						const db = event.target.result;
 						const loadTransaction = db.transaction(["thing"], 'readonly');
@@ -633,7 +633,7 @@
 			save: (item) => {
 				return new Promise((resolve, reject) => {
 					const indexedDB = window.indexedDB || window.mozIndexedDB || window.webkitIndexedDB || window.msIndexedDB;
-					const openDBRequest = indexedDB.open("thingdb", 9);
+					const openDBRequest = indexedDB.open(dbNamedbVersion);
 					openDBRequest.onsuccess = (event) => {
 						const db = event.target.result;
 						const saveTransaction = db.transaction(["thing"], "readwrite");
@@ -706,7 +706,7 @@
 			delete: (itemId) => {
 				return new Promise((resolve, reject) => {
 					const indexedDB = window.indexedDB || window.mozIndexedDB || window.webkitIndexedDB || window.msIndexedDB;
-					const openDBRequest = indexedDB.open("thingdb", 9);
+					const openDBRequest = indexedDB.open(dbNamedbVersion);
 					openDBRequest.onsuccess = (event) => {
 						const db = event.target.result;
 						const deleteTransaction = db.transaction(["thing"], "readwrite");
@@ -751,7 +751,7 @@
 				return new Promise((resolve, reject) => {
 					// Get the currently active project.
 					var indexedDB = window.indexedDB || window.mozIndexedDB || window.webkitIndexedDB || window.msIndexedDB;
-					var openDBRequest = indexedDB.open("thingdb", 9);
+					var openDBRequest = indexedDB.open(dbNamedbVersion);
 					openDBRequest.onsuccess = (event) => {
 						var db = event.target.result;
 						var loadTransaction = db.transaction(["type"], 'readonly');
@@ -778,7 +778,7 @@
 			save: (itemType) => {
 				return new Promise((resolve, reject) => {
 					const indexedDB = window.indexedDB || window.mozIndexedDB || window.webkitIndexedDB || window.msIndexedDB;
-					const openDBRequest = indexedDB.open("thingdb", 9);
+					const openDBRequest = indexedDB.open(dbNamedbVersion);
 					openDBRequest.onsuccess = (event) => {
 						const db = event.target.result;
 						const saveTransaction = db.transaction(["type"], "readwrite");
@@ -839,7 +839,7 @@
 			delete: (itemTypeId) => {
 				return new Promise((resolve, reject) => {
 					const indexedDB = window.indexedDB || window.mozIndexedDB || window.webkitIndexedDB || window.msIndexedDB;
-					const openDBRequest = indexedDB.open("thingdb", 9);
+					const openDBRequest = indexedDB.open(dbNamedbVersion);
 					openDBRequest.onsuccess = (event) => {
 						const db = event.target.result;
 						const deleteTransaction = db.transaction(["type"], "readwrite");
@@ -884,7 +884,7 @@
 				return new Promise((resolve, reject) => {
 					// Get the currently active project.
 					var indexedDB = window.indexedDB || window.mozIndexedDB || window.webkitIndexedDB || window.msIndexedDB;
-					var openDBRequest = indexedDB.open("thingdb", 9);
+					var openDBRequest = indexedDB.open(dbNamedbVersion);
 					openDBRequest.onsuccess = (event) => {
 						var db = event.target.result;
 						var loadTransaction = db.transaction(["connection"], 'readonly');
@@ -911,7 +911,7 @@
 			save: (link) => {
 				return new Promise((resolve, reject) => {
 					const indexedDB = window.indexedDB || window.mozIndexedDB || window.webkitIndexedDB || window.msIndexedDB;
-					const openDBRequest = indexedDB.open("thingdb", 9);
+					const openDBRequest = indexedDB.open(dbNamedbVersion);
 					openDBRequest.onsuccess = (event) => {
 						const db = event.target.result;
 						const saveTransaction = db.transaction(["connection"], "readwrite");
@@ -995,7 +995,7 @@
 			delete: (linkId) => {
 				return new Promise((resolve, reject) => {
 					const indexedDB = window.indexedDB || window.mozIndexedDB || window.webkitIndexedDB || window.msIndexedDB;
-					const openDBRequest = indexedDB.open("thingdb", 9);
+					const openDBRequest = indexedDB.open(dbNamedbVersion);
 					openDBRequest.onsuccess = (event) => {
 						const db = event.target.result;
 						const deleteTransaction = db.transaction(["connection"], "readwrite");
@@ -1040,7 +1040,7 @@
 				return new Promise((resolve, reject) => {
 					// Get the currently active project.
 					var indexedDB = window.indexedDB || window.mozIndexedDB || window.webkitIndexedDB || window.msIndexedDB;
-					var openDBRequest = indexedDB.open("thingdb", 9);
+					var openDBRequest = indexedDB.open(dbNamedbVersion);
 					openDBRequest.onsuccess = (event) => {
 						var db = event.target.result;
 						var loadTransaction = db.transaction(["connector"], 'readonly');
@@ -1067,7 +1067,7 @@
 			save: (linkType) => {
 				return new Promise((resolve, reject) => {
 					const indexedDB = window.indexedDB || window.mozIndexedDB || window.webkitIndexedDB || window.msIndexedDB;
-					const openDBRequest = indexedDB.open("thingdb", 9);
+					const openDBRequest = indexedDB.open(dbNamedbVersion);
 					openDBRequest.onsuccess = (event) => {
 						const db = event.target.result;
 						const saveTransaction = db.transaction(["connector"], "readwrite");
@@ -1128,7 +1128,7 @@
 			delete: (linkTypeId) => {
 				return new Promise((resolve, reject) => {
 					const indexedDB = window.indexedDB || window.mozIndexedDB || window.webkitIndexedDB || window.msIndexedDB;
-					const openDBRequest = indexedDB.open("thingdb", 9);
+					const openDBRequest = indexedDB.open(dbNamedbVersion);
 					openDBRequest.onsuccess = (event) => {
 						const db = event.target.result;
 						const deleteTransaction = db.transaction(["connector"], "readwrite");
@@ -1174,7 +1174,7 @@
 				return new Promise((resolve, reject) => {
 					// Get the currently active project.
 					const indexedDB = window.indexedDB || window.mozIndexedDB || window.webkitIndexedDB || window.msIndexedDB;
-					const openDBRequest = indexedDB.open("thingdb", 9);
+					const openDBRequest = indexedDB.open(dbNamedbVersion);
 					openDBRequest.onsuccess = (event) => {
 						const db = event.target.result;
 						const loadTransaction = db.transaction(["filter"], 'readonly');
@@ -1202,7 +1202,7 @@
 			save: (filter) => {
 				return new Promise((resolve, reject) => {
 					const indexedDB = window.indexedDB || window.mozIndexedDB || window.webkitIndexedDB || window.msIndexedDB;
-					const openDBRequest = indexedDB.open("thingdb", 9);
+					const openDBRequest = indexedDB.open(dbNamedbVersion);
 					openDBRequest.onsuccess = (event) => {
 						const db = event.target.result;
 						const saveTransaction = db.transaction(["filter"], "readwrite");
@@ -1267,7 +1267,7 @@
 			delete: (filterId) => {
 				return new Promise((resolve, reject) => {
 					const indexedDB = window.indexedDB || window.mozIndexedDB || window.webkitIndexedDB || window.msIndexedDB;
-					const openDBRequest = indexedDB.open("thingdb", 9);
+					const openDBRequest = indexedDB.open(dbNamedbVersion);
 					openDBRequest.onsuccess = (event) => {
 						const db = event.target.result;
 						const deleteTransaction = db.transaction(["filter"], "readwrite");
@@ -1329,7 +1329,7 @@
 				// Check if the database needs creation or updating.
 				const checkDatabase = () => {
 					return new Promise((resolve, reject) => {
-						dbName = "thingdb";
+						dbName = dbName;
 						dbVersion = 9;
 
 						const request = indexedDB.open(dbName, dbVersion);
