Embedded boxes with margin

--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 						aria-controls="visualise" aria-selected="false">Visualise</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" id="test-visualise-tab" data-toggle="tab" href="#test-visualise" role="tab"
-						aria-controls="test-visualise" aria-selected="false">Test Visualise</a>
+					<a class="nav-link" id="visualise-embedded-tab" data-toggle="tab" href="#visualise-embedded" role="tab"
+						aria-controls="visualise-embedded" aria-selected="false">Visualise Embedded</a>
 				</li>
 			</ul>
 			<!-- <form class="form-inline"> -->
@@ -234,7 +234,7 @@
 			<div class="tab-pane fade-in" id="visualise" role="tabpanel" aria-labelledby="visualise-tab">
 				<div id="chart" style="position: relative;"></div>
 			</div>
-			<div class="tab-pane fade-in" id="test-visualise" role="tabpanel" aria-labelledby="test-visualise-tab">
+			<div class="tab-pane fade-in" id="visualise-embedded" role="tabpanel" aria-labelledby="visualise-embedded-tab">
 				<div id="test-chart" style="position: relative;"></div>
 			</div>
 		</div>
