--- a/index.html
+++ b/index.html
@@ -227,12 +227,18 @@
 					<div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
 						...</div>
 				</div>
-			</div>
+				<div class="toast position-absolute bottom-0 end-0 bg-secondary text-white" role="alert" aria-live="assertive" aria-atomic="true">
+					<div class="toast-body" id="progress-message">
+						
+					</div>
+				</div>
+				</div>
 		</div>
 		<footer>
 			<small>&copy West Wind Technologies, 2016</small>
 		</footer>
 	</div>
+
 	<script src="models.js"></script>
 	<script src="control.js"></script>
 	<script src="views.js"></script>
