--- a/index.html
+++ b/index.html
@@ -150,9 +150,9 @@
 			<nav class="navbar bg-light border-bottom">
 				<ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
 					<li class="nav-item" role="presentation">
-						<button class="nav-link active" id="home-tab" data-bs-toggle="pill"
-							data-bs-target="#home" type="button" role="tab" aria-controls="home"
-							aria-selected="true">Home</button>
+						<button class="nav-link active" id="projects-tab" data-bs-toggle="pill"
+							data-bs-target="#projects" type="button" role="tab" aria-controls="projects"
+							aria-selected="true">Projects</button>
 					</li>
 					<li class="nav-item" role="presentation">
 						<button class="nav-link" id="items-tab" data-bs-toggle="pill"
@@ -182,88 +182,11 @@
 			</div>
 			<div class="content-container">
 				<div class="tab-content w-100" id="pills-tabContent">
-					<div class="tab-pane fade show active" id="home" role="tabpanel"
-						aria-labelledby="home-tab">
-						<div class="d-flex justify-content-end">
-							<div class="btn-group" role="group" aria-label="Basic outlined example">
-								<button type="button" class="btn btn-outline-primary" id="new-project">New</button>
-								<button type="button" class="btn btn-outline-primary">Delete</button>
-							</div>
-						</div>
-						<div class="fs-5 fw-semibold" id="list-group-name" id="list-group-name">Project Details</div>
-						<div class="mb-3">
-							<label for="projectIdentifierInput" class="form-label">Identifier</label>
-							<input type="text" class="form-control" id="projectIdentifierInput"
-								placeholder="Enter Identifier...">
-						</div>
-						<div class="mb-3">
-							<label for="projectDescriptionInput" class="form-label">Description</label>
-							<textarea class="form-control" id="projectDescriptionInput" rows="3"></textarea>
-						</div>
-						<div class="card mb-3">
-							<div class="card-body">
-								<h5 class="card-title">Colours</h5>
-								<label for="projectForecolorInput" class="form-label">Forecolour</label>
-								<input type="color" class="form-control form-control-color" id="projectForecolorInput"
-									title="Choose your color">
-								<label for="projectBackcolorInput" class="form-label">Backcolor</label>
-								<input type="color" class="form-control form-control-color" id="projectBackcolorInput"
-									title="Choose your color">
-							</div>
-						</div>
-						<div class="mb-3">
-							<label for="projectUpdatedInput" class="form-label">Last updated</label>
-							<input type="text" class="form-control" id="projectUpdatedInput" readonly="true">
-						</div>
-						<div class="mb-3">
-							<label for="projectCreatedInput" class="form-label">Created</label>
-							<input type="text" class="form-control" id="projectCreatedInput" readonly="true">
-						</div>
-						<div class="btn-group" role="group" aria-label="project toolbar">
-							<button type="button" class="btn btn-primary" id="projectSave">Save</button>
-						</div>
-
+					<div class="tab-pane fade" id="projects" role="tabpanel" aria-labelledby="projects-tab">
+						<div id="project-details"></div>
 					</div>
 					<div class="tab-pane fade" id="items" role="tabpanel" aria-labelledby="items-tab">
 						<div id="item-details"></div>
-						<!-- <div class="d-flex justify-content-end">
-							<div class="btn-group" role="group" aria-label="Basic outlined example">
-								<button type="button" class="btn btn-outline-primary" id="new-item">New</button>
-								<button type="button" class="btn btn-outline-primary">Delete</button>
-							</div>
-						</div>
-						<div class="fs-5 fw-semibold">Item Details</div>
-						<div class="mb-3">
-							<label for="itemIdentifierInput" class="form-label">Identifier</label>
-							<input type="text" class="form-control" id="itemIdentifierInput"
-								placeholder="Enter Identifier...">
-						</div>
-						<div class="mb-3">
-							<label for="itemDescriptionInput" class="form-label">Description</label>
-							<textarea class="form-control" id="itemDescriptionInput" rows="3"></textarea>
-						</div>
-						<div class="card mb-3">
-							<div class="card-body">
-								<h5 class="card-title">Colours</h5>
-								<label for="itemForecolorInput" class="form-label">Forecolour</label>
-								<input type="color" class="form-control form-control-color" id="itemForecolorInput"
-									title="Choose your color">
-								<label for="itemBackcolorInput" class="form-label">Backcolor</label>
-								<input type="color" class="form-control form-control-color" id="itemBackcolorInput"
-									title="Choose your color">
-							</div>
-						</div>
-						<div class="mb-3">
-							<label for="itemUpdatedInput" class="form-label">Last updated</label>
-							<input type="text" class="form-control" id="itemUpdatedInput" readonly="true">
-						</div>
-						<div class="mb-3">
-							<label for="itemCreatedInput" class="form-label">Created</label>
-							<input type="text" class="form-control" id="itemCreatedInput" readonly="true">
-						</div>
-						<div class="btn-group" role="group" aria-label="Items toolbar">
-							<button type="button" class="btn btn-primary" id="itemSave">Save</button>
-						</div> -->
 					</div>
 					<div class="tab-pane fade" id="pills-contact" role="tabpanel" aria-labelledby="pills-contact-tab">
 						...</div>
